re #128: Fixed scrollbar in login screen

--- a/code/administrator/templates/default/css/login.css
+++ b/code/administrator/templates/default/css/login.css
@@ -3,6 +3,9 @@
 @import url("general.css");
 
 /* -- Specific styles ----------------------------- */
+body {
+	overflow: auto;
+}
 
 form  			{ margin: 0px; padding: 0px; }
 form .inputbox  { 
@@ -42,7 +45,7 @@ p {
 
 img { margin-bottom: 25px; }
 
-#login-box { padding-top: 50px; }
+#login-box { padding: 50px 0 10px 0; }
 #section-box {
 	-webkit-box-shadow: #AAA 0px 3px 15px;
 	-moz-box-shadow: #AAA 0px 3px 15px;
